RESOLVED FIXED174032
REGRESSION (r218757): Touch Bar's media scrubber timeline runs from 00:00 to 00:00 and has no playhead
https://bugs.webkit.org/show_bug.cgi?id=174032
Summary REGRESSION (r218757): Touch Bar's media scrubber timeline runs from 00:00 to ...
Jer Noble
Reported 2017-06-30 11:20:12 PDT
REGRESSION (r218757): Touch Bar's media scrubber timeline runs from 00:00 to 00:00 and has no playhead
Attachments
Patch (1.64 KB, patch)
2017-06-30 11:28 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2017-06-30 11:21:55 PDT
Jer Noble
Comment 2 2017-06-30 11:28:59 PDT
Jer Noble
Comment 3 2017-06-30 11:29:45 PDT
WebKit Commit Bot
Comment 4 2017-06-30 14:00:13 PDT
Comment on attachment 314278 [details] Patch Clearing flags on attachment: 314278 Committed r219011: <http://trac.webkit.org/changeset/219011>
WebKit Commit Bot
Comment 5 2017-06-30 14:00:15 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.