REGRESSION (r218757): Touch Bar's media scrubber timeline runs from 00:00 to 00:00 and has no playhead https://bugs.webkit.org/show_bug.cgi?id=174032

Reviewed by Eric Carlson.

Fix a copypasta error where durationChange notifications were changing the value of muted.

* UIProcess/Cocoa/WebPlaybackSessionManagerProxy.mm:
(WebKit::WebPlaybackSessionManagerProxy::durationChanged):


Canonical link: https://commits.webkit.org/190866@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219011 268f45cc-cd09-0410-ab3c-d52691b4dbfc